play card from hand

--- a/HearthstoneDIY/HearthstoneDIY/HearthstoneDIY.csproj
+++ b/HearthstoneDIY/HearthstoneDIY/HearthstoneDIY.csproj
@@ -82,6 +82,9 @@
     <EmbeddedResource Include="FormStartMenu.resx">
       <DependentUpon>FormStartMenu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GameBoard.resx">
+      <DependentUpon>GameBoard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
